--- a/trunk/frameworkedGL/VSNet/testCG/testCG.vcproj
+++ b/trunk/frameworkedGL/VSNet/testCG/testCG.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\framework\src"
+				AdditionalIncludeDirectories="..\..\..\framework\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -71,7 +71,7 @@
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\framework\src"
+				AdditionalIncludeDirectories="..\..\..\framework\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -122,10 +122,10 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
-				RelativePath="..\..\testCG\src\main.cpp">
+				RelativePath="..\..\..\testCG\src\main.cpp">
 			</File>
 			<File
-				RelativePath="..\..\testCG\src\testapp.cpp">
+				RelativePath="..\..\..\testCG\src\testapp.cpp">
 			</File>
 		</Filter>
 		<Filter
@@ -133,7 +133,7 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
 			<File
-				RelativePath="..\..\testCG\src\testapp.h">
+				RelativePath="..\..\..\testCG\src\testapp.h">
 			</File>
 		</Filter>
 		<Filter
@@ -145,10 +145,10 @@
 			Name="shaders"
 			Filter="">
 			<File
-				RelativePath="..\..\common\shaders\testCG\simple_frag.cg">
+				RelativePath="..\..\..\common\shaders\testCG\simple_frag.cg">
 			</File>
 			<File
-				RelativePath="..\..\common\shaders\testCG\simple_vert.cg">
+				RelativePath="..\..\..\common\shaders\testCG\simple_vert.cg">
 			</File>
 		</Filter>
 	</Files>
