--- a/trunk/frameworkedGL/framework/SConscript
+++ b/trunk/frameworkedGL/framework/SConscript
@@ -7,9 +7,12 @@ Export('env')
 
 SConscript('src/SConscript')
 
+#env.Alias(target="install", 
+#	  source=env.Install(dir=os.path.join(env['PREFIX'], "lib"),
+#			     source="src/libframeworkGL.a"))
 env.Alias(target="install", 
 	  source=env.Install(dir=os.path.join(env['PREFIX'], "lib"),
-			     source="src/libframeworkGL.a"))
+		     source="src/libframeworkGL.so"))
 
 #Install include files
 src_math = """src/math/matrix.h
