target for test programs

--- a/trunk/frameworkedGL/tests/SConstruct
+++ b/trunk/frameworkedGL/tests/SConstruct
@@ -30,3 +30,9 @@ SConscript('testCG/SConscript', exports = 'env')
 SConscript('volrend/SConscript', exports = 'env')
 SConscript('volrendCG/SConscript', exports = 'env')
 SConscript('testBatch/SConscript', exports = 'env')
+
+env.Alias('testTexture', 'testTexture/src/testTexture')
+env.Alias('testCG', 'testCG/src/testCG')
+env.Alias('volrend' 'volrend/src/volrend')
+env.Alias('volrendCG' 'volrendCG/src/volrendCG')
+env.Alias('testBatch', 'testBatch/src/testBatch')
