--- a/trunk/frameworkedGL/tests/clipmap/src/SConscript
+++ b/trunk/frameworkedGL/tests/clipmap/src/SConscript
@@ -4,6 +4,7 @@ Import('env')
 
 src="""main.cpp
        testapp.cpp
-       clipmap.cpp"""
+       clipmap.cpp
+       mipmap.cpp"""
 
 env.Program('clipmap', Split(src))
