--- a/trunk/frameworkedGL/tests/SConstruct
+++ b/trunk/frameworkedGL/tests/SConstruct
@@ -27,14 +27,14 @@ env.PrependUnique(LIBS = framework_lib+z_lib)
 #Create test programs
 SConscript('testTexture/SConscript', exports = 'env')
 SConscript('testCG/SConscript', exports = 'env')
-SConscript('volrend/SConscript', exports = 'env')
-SConscript('volrendCG/SConscript', exports = 'env')
+SConscript('volumeGLSL/SConscript', exports = 'env')
+SConscript('volumeCG/SConscript', exports = 'env')
 SConscript('testBatch/SConscript', exports = 'env')
 SConscript('clipmap/src/SConscript', exports = 'env')
 
 env.Alias('testTexture', 'testTexture/src/testTexture')
 env.Alias('testCG', 'testCG/src/testCG')
-env.Alias('volrend' 'volrend/src/volrend')
-env.Alias('volrendCG' 'volrendCG/src/volrendCG')
+env.Alias('volumeGLSL' 'volumeGLSL/src/volumeGLSL')
+env.Alias('volumeCG' 'volumeCG/src/volumeCG')
 env.Alias('testBatch', 'testBatch/src/testBatch')
 env.Alias('clipmap', 'clipmap/src/clipmap')
