--- a/trunk/GLstats/src/Makefile.am
+++ b/trunk/GLstats/src/Makefile.am
@@ -5,4 +5,5 @@ lib_LTLIBRARIES = libGLstats.la
 libGLstats_la_SOURCES=glstats.cxx LibraryLoader.cxx GLXFuncs.cxx glx.cxx \
                       font.cxx timer.cxx GLObjectList.cxx \
                       GLStatConfig.cxx Global.cxx GLContext.cxx \
-		      LoggerManager.cxx UIWindow.cxx
+		      LoggerManager.cxx UIWindow.cxx UILoggerDisplay.cxx \
+		      CounterManager.cxx
